# boreal_kiss

./: Cargo.toml  README.md
assets/maps/: map_1  map_1.json  map_2.json  map_3.json  map_4.json  map_5.json  world.json
assets/models/axis/: axis.gltf
assets/models/sphere/: sphere.gltf
editor/: Cargo.toml
editor/src/: debug_scenes.rs  lib.rs
engine/: Cargo.toml
engine/src/: camera.rs  game_loop.rs  input.rs  lib.rs  math.rs  platform.rs  platform_x64_winit.rs  time.rs  window.rs  window_x64_winit.rs
engine/src/renderer/: mod.rs  opengl.rs
game/: Cargo.toml
game/src/: constants.rs  main.rs  state.rs
renderer/: Cargo.toml
renderer/src/: color.rs  font.rs  lib.rs  mesh.rs  object.rs  opengl.rs  position.rs  primitives.rs  ray.rs  storage.rs  text.rs  texture.rs  utils.rs  vertex.rs
renderer/src/shaders/: mod.rs  simple.rs  simple_with_tex.rs  text.rs
src/: camera.rs  colliders.rs  constants.rs  debug_scenes.rs  entities.rs  game_loop.rs  global.rs  gui.rs  input.rs  main.rs  map.rs  map_file.rs  math.rs  memory_arena.rs  platform.rs  player.rs  state.rs  tilemap.rs  time.rs  wall.rs
src/editor/: debug_camera.rs  mod.rs
src/renderer/: draw.rs  font.rs  light.rs  mesh.rs  mod.rs  opengl.rs  primitives.rs  ray.rs  storage.rs  text.rs  types.rs
src/renderer/shaders/: light.rs  mod.rs  quad.rs  simple.rs  text.rs
