[package]
name = "Bits"
version = "0.1.0"
authors = ["Alexandre Chêne <kooparse@protonmail.com>"]
edition = "2018"

[dependencies]
nalgebra-glm = "0.4.2"
engine = { path = "engine" }
renderer = { path = "renderer" }

[workspace]
members = ["engine", "renderer"]

[[bin]]
name = "game"
path = "game/src/main.rs"
