[package]
name = "bits"
version = "0.1.0"
authors = ["Alexandre Chêne <kooparse@protonmail.com>"]
edition = "2018"

[dependencies]
nalgebra-glm = "0.4.2"
lazy_static = "1.4.0"
gl = "0.13.0"
gltf = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.image]
version = "0.22.1"
default-features = false
features = ["png_codec"]

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
glutin = "0.21"

[features]
default = []
debug = []
