[package]
name = "engine"
version = "0.1.0"
authors = ["Alexandre Chêne <kooparse@protonmail.com>"]
edition = "2018"

[dependencies]
gl = "0.13.0"
serde = "1.0.98"
nalgebra-glm = "0.4.2"
renderer = { path = "../renderer" }

[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
glutin = "0.21"
