[package]
name = "renderer"
version = "0.1.0"
authors = ["Alexandre Chêne <kooparse@protonmail.com>"]
edition = "2018"

[dependencies]
gl = "0.13.0"
nalgebra-glm = "0.4.2"
gltf = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.image]
version = "0.22.1"
default-features = false
features = ["png_codec"]
